--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
+    "ngx-cookie-service": "^16.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
